// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/intentDetail can render intent with special characters correctly 1`] = `
<div
  className="mrb-action-panel list-box"
>
  <div
    className="list-content"
  >
    <div
      className="mrb-sublist mdl-color--white"
      style={
        Object {
          "margin": "8px",
        }
      }
    >
      <div
        className="mrb-subheader"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          style={
            Object {
              "float": "right",
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <i
            className="mrb-subheader-right material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <span
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              input
              <div
                className="mdc-tooltype"
              >
                <i
                  className="material-icons"
                  style={
                    Object {
                      "color": "#ddd",
                      "paddingLeft": "16px",
                      "paddingTop": "12px",
                    }
                  }
                >
                  help_outline
                </i>
                <span>
                  List of sentences, events or attachments that will trigger this intent.
                </span>
              </div>
            </div>
          </span>
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "paddingLeft": "16px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "border": "1px solid rgba(0, 0, 0, 0.2)",
              "color": "black",
              "margin": "0 8px",
              "minHeight": "40px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            format_quote
          </i>
          <div
            aria-label="Add an input sentence"
            className="contenteditable"
            id="ae_content"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            spellCheck={false}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": 1,
                "minHeight": "40px",
              }
            }
            tabIndex={0}
          >
            <span
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexWrap": "wrap",
                }
              }
            >
              <span
                className={undefined}
                data="text"
                id="ae_start"
                onClick={[Function]}
                onInput={[Function]}
                style={
                  Object {
                    "display": "inline-block",
                    "flex": "1",
                    "minHeight": "15px",
                    "padding": "0 4px",
                  }
                }
                tabIndex={1}
              />
            </span>
          </div>
          <div />
        </li>
      </div>
    </div>
    <div
      className="mrb-sublist mdl-color--white"
      style={
        Object {
          "margin": "8px",
        }
      }
    >
      <div
        className="mrb-subheader"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          style={
            Object {
              "float": "right",
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <i
            className="mrb-subheader-right material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <span
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              output
              <div
                className="mdc-tooltype"
              >
                <i
                  className="material-icons"
                  style={
                    Object {
                      "color": "#ddd",
                      "paddingLeft": "16px",
                      "paddingTop": "12px",
                    }
                  }
                >
                  help_outline
                </i>
                <span>
                  One of below items is send to the user if this intent is activated.
                </span>
              </div>
            </div>
          </span>
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "paddingLeft": "16px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "border": "1px solid rgba(0, 0, 0, 0.2)",
              "color": "black",
              "margin": "0 8px",
              "minHeight": "40px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            chat_bubble_outline
          </i>
          <div
            aria-label="Add an output response"
            className="contenteditable"
            id="ae_content"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            spellCheck={false}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": 1,
                "minHeight": "40px",
              }
            }
            tabIndex={0}
          >
            <span
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexWrap": "wrap",
                }
              }
            >
              <span
                className={undefined}
                data="text"
                id="ae_start"
                onClick={[Function]}
                onInput={[Function]}
                style={
                  Object {
                    "display": "inline-block",
                    "flex": "1",
                    "minHeight": "15px",
                    "padding": "0 4px",
                  }
                }
                tabIndex={1}
              />
            </span>
          </div>
          <div />
        </li>
      </div>
    </div>
    <div
      className="mrb-sublist mdl-color--white"
      style={
        Object {
          "margin": "8px",
        }
      }
    >
      <div
        className="mrb-subheader"
        onClick={[Function]}
        style={
          Object {
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          style={
            Object {
              "float": "right",
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <i
            className="mrb-subheader-right material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_down
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <span
            style={
              Object {
                "width": "33%",
              }
            }
          >
            Parameters
          </span>
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "paddingLeft": "16px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        >
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              title
            </i>
            Topic
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                {{%7B%7Btext%7D%7D}}&lt;&lt;%3C%3Cvar%3E%3E&gt;&gt;
              </button>
            </span>
          </li>
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              link
            </i>
            Previous
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                NONE
              </button>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/intentDetail renders correctly 1`] = `
<div
  className="mrb-action-panel list-box"
>
  <div
    className="list-content"
  >
    <div
      className="mrb-sublist mdl-color--white"
      style={
        Object {
          "margin": "8px",
        }
      }
    >
      <div
        className="mrb-subheader"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          style={
            Object {
              "float": "right",
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <i
            className="mrb-subheader-right material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <span
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              input
              <div
                className="mdc-tooltype"
              >
                <i
                  className="material-icons"
                  style={
                    Object {
                      "color": "#ddd",
                      "paddingLeft": "16px",
                      "paddingTop": "12px",
                    }
                  }
                >
                  help_outline
                </i>
                <span>
                  List of sentences, events or attachments that will trigger this intent.
                </span>
              </div>
            </div>
          </span>
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "paddingLeft": "16px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "border": "1px solid rgba(0, 0, 0, 0.2)",
              "color": "black",
              "margin": "0 8px",
              "minHeight": "40px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            format_quote
          </i>
          <div
            aria-label="Add an input sentence"
            className="contenteditable"
            id="ae_content"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            spellCheck={false}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": 1,
                "minHeight": "40px",
              }
            }
            tabIndex={0}
          >
            <span
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexWrap": "wrap",
                }
              }
            >
              <span
                className={undefined}
                data="text"
                id="ae_start"
                onClick={[Function]}
                onInput={[Function]}
                style={
                  Object {
                    "display": "inline-block",
                    "flex": "1",
                    "minHeight": "15px",
                    "padding": "0 4px",
                  }
                }
                tabIndex={1}
              />
            </span>
          </div>
          <div />
        </li>
      </div>
    </div>
    <div
      className="mrb-sublist mdl-color--white"
      style={
        Object {
          "margin": "8px",
        }
      }
    >
      <div
        className="mrb-subheader"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          style={
            Object {
              "float": "right",
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <i
            className="mrb-subheader-right material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <span
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              output
              <div
                className="mdc-tooltype"
              >
                <i
                  className="material-icons"
                  style={
                    Object {
                      "color": "#ddd",
                      "paddingLeft": "16px",
                      "paddingTop": "12px",
                    }
                  }
                >
                  help_outline
                </i>
                <span>
                  One of below items is send to the user if this intent is activated.
                </span>
              </div>
            </div>
          </span>
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "paddingLeft": "16px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        />
        <li
          className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={
            Object {
              "border": "1px solid rgba(0, 0, 0, 0.2)",
              "color": "black",
              "margin": "0 8px",
              "minHeight": "40px",
            }
          }
        >
          <i
            aria-hidden="true"
            className="mdc-list-item__graphic material-icons"
          >
            chat_bubble_outline
          </i>
          <div
            aria-label="Add an output response"
            className="contenteditable"
            id="ae_content"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            spellCheck={false}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": 1,
                "minHeight": "40px",
              }
            }
            tabIndex={0}
          >
            <span
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexWrap": "wrap",
                }
              }
            >
              <span
                className={undefined}
                data="text"
                id="ae_start"
                onClick={[Function]}
                onInput={[Function]}
                style={
                  Object {
                    "display": "inline-block",
                    "flex": "1",
                    "minHeight": "15px",
                    "padding": "0 4px",
                  }
                }
                tabIndex={1}
              />
            </span>
          </div>
          <div />
        </li>
      </div>
    </div>
    <div
      className="mrb-sublist mdl-color--white"
      style={
        Object {
          "margin": "8px",
        }
      }
    >
      <div
        className="mrb-subheader"
        onClick={[Function]}
        style={
          Object {
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          style={
            Object {
              "float": "right",
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <i
            className="mrb-subheader-right material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_down
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <span
            style={
              Object {
                "width": "33%",
              }
            }
          >
            Parameters
          </span>
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "paddingLeft": "16px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        >
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              title
            </i>
            Topic
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                some intent
              </button>
            </span>
          </li>
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              link
            </i>
            Previous
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="mrb-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                NONE
              </button>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
